force-app/main/default/objects/ServiceTerritoryMember/fields/Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Long_Term__c</fullName>
    <formula>OperatingHours.Long_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Term</label>
    <type>Checkbox</type>
</CustomField>