force-app/main/default/objects/ServiceTerritoryMember/fields/OpHours_Location__c.field-meta.xml
<CustomField>
    <fullName>OpHours_Location__c</fullName>
    <formula>OperatingHours.Location_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpHours Location</label>
    <type>Checkbox</type>
</CustomField>