force-app/main/default/objects/ServiceTerritoryMember/fields/OpHours_Protected__c.field-meta.xml
<CustomField>
    <fullName>OpHours_Protected__c</fullName>
    <formula>OperatingHours.Protected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpHours Protected</label>
    <type>Checkbox</type>
</CustomField>